crates/ui/src/screens/battle/snapshots/trpg_ui__screens__battle__item_tests__equip_menu_with_a_broken_weapon_snapshot.snap
---
source: crates/ui/src/screens/battle/item_tests.rs
expression: buf.to_snapshot(&c.palette)
---
                                                                      ╔════════════════════════════╗
                                                                      ║ Plain                      ║
                                                                      ║ DEF +0  AVO +0             ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║ Test Lord                  ║
                                                                      ║ Exile  Lv 1                ║
                                                                      ║ HP 19/19   ██████████      ║
                                                                      ║ Player                     ║
                                                                      ║                            ║
                                                                      ║                            ║
                    ≈≈≈≈≈≈≈≈≈≈....♣♣♣♣♠♠♠♠^^^^▲▲                      ║                            ║
                    ≈≈≈≈≈≈≈≈....··Ra··♣♣♣♣^^^^^^                      ║                            ║
                    ≈≈≈≈≈≈====······Br..♣♣♣♣....                      ║                            ║
                    ..≈≈≈≈..··..............╦╦..                      ║                            ║
┌────────────────────────────────────────────────────────────┐        ║                            ║
│ * Iron Sword   Mt 5 Hit 90 Crit 0 Wt 2 Rng1 12/20          │        ║                            ║
│   Steel Sword  Mt 8 Hit 75 Crit 0 Wt 4 Rng1  0/25 (broken) │        ║                            ║
└────────────────────────────────────────────────────────────┘        ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ║                            ║
                                                                      ╚════════════════════════════╝
                                                     w danger zone: OFF · Shift+Space auto-end: OFF 
 arrows choose · f equip · d back                                                          F2 debug 
--- colours ---
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabcdddddccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabceeeeeeeeeccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccffffffffffccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabcggggggcccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaahhhhhhiiiijjjjkkkkllllmmmmnnaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaahhhhiiiijjjjooppookkkkmmmmmmaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaahhiiiiqqqqoooooorrjjkkkkjjjjaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaajjiiiijjoojjjjjjjjjjjjjjssjjaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaaaaaaaabccccccccccccccccccccccccccccb
bttttttttttttttttttttttttttttttttttttttttttttttttttttttttttttbaaaaaaaabccccccccccccccccccccccccccccb
bcccccccccccccccccccccccccccccccccccccccccccccccccccuuuuuuuucbaaaaaaaabccccccccccccccccccccccccccccb
bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabccccccccccccccccccccccccccccb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaabbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaavvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvva
avvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvvaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaavvvvvvvva
--- legend ---
a = fg:text bg:black
b = fg:panel_border bg:panel_bg
c = fg:text bg:panel_bg
d = fg:text_highlight bg:panel_bg
e = fg:player bg:panel_bg
f = fg:hp_high bg:panel_bg
g = fg:text_dim bg:panel_bg
h = fg:water bg:sea
i = fg:water bg:water_bg
j = fg:grass bg:grass_bg
k = fg:forest bg:forest_bg
l = fg:thicket bg:thicket_bg
m = fg:mountain bg:mountain_bg
n = fg:peak bg:peak_bg
o = fg:road bg:road_bg
p = fg:enemy bg:road_bg
q = fg:wood bg:water_bg
r = fg:enemy bg:grass_bg
s = fg:fort bg:fort_bg
t = fg:panel_bg bg:panel_border_focus
u = fg:hp_low bg:panel_bg
v = fg:text_dim bg:black
--- overlays ---
over  288,222 16x2  hp_high
over  272,206 16x2  hp_high
